Fixing height on mobile, try 2

--- a/style.css
+++ b/style.css
@@ -38,6 +38,10 @@
   align-items: center;
 }
 
+html {
+  height: -webkit-fill-available;
+}
+
 body {
   width: 100vw;
   height: 100vh;
